안드로이드, IOS 테스트 빌드 완료

--- a/TIL/week-1/0304.md
+++ b/TIL/week-1/0304.md
@@ -1,3 +1,4 @@
 - xcode로 프로젝트 실행시 워크스페이스 파일을 불러와야 한다.
 - `/ios` pod deintegrate && pod install pod 파일 재설치
 - xcode - general - `Bundle Identifier`의 이름은 앱의 고유 이름이어야 한다 (배포시 영향)
+- 화면은 작은거 기준, OS는 애플 기준으로 코딩하는 것이 더 범용적
