--- a/TIL/week-1/0305.md
+++ b/TIL/week-1/0305.md
@@ -1,4 +1,4 @@
-- 성능정으로 인라인 스타일링보다 스타일 객체를 만드는게 좋다 (드라마틱하진 않으니 상황에 맞게)
+- 성능적으로 인라인 스타일링보다 스타일 객체를 만드는게 좋다 (드라마틱하진 않으니 상황에 맞게)
 - react-native css cheat sheet를 통해 지원 안 하는 스타일링을 인지하자
 - `SafeAreaView`
   > 아이폰의 노치 같은 컨텐츠가 짤리는 공간을 제외하여 View를 할당
