Day 4:  relative, absolute로 모달 그리기

--- a/wonjin/TIL/week-2/0307.md
+++ b/wonjin/TIL/week-2/0307.md
@@ -1,4 +1,4 @@
 - 모달, 컴포넌트 등 덮어씌우고 싶다면 타겟보다 밑에 코드를 작성
 - absolute와 relative의 차이는 포지셔닝 되는 기준이다
-- 페이지를 처음 구상할때 네비게이션 구조도 고려해야한다
+- 프로젝트를 구상할때 네비게이션 구조도 고려해야한다
   > 네비게이터 안에 네비게이터를 중첩해서 사용할 수 있다
