Day 10: ios 빌드 에러 수정

--- a/wonjin/TIL/week-2/0313.md
+++ b/wonjin/TIL/week-2/0313.md
@@ -1,7 +1,12 @@
 ## ios 빌드 에러
+```
 Error: RNEncryptedStorage is undefined
 ERROR  Invariant Violation: Module AppRegistry is not a registered callable module (calling runApplication). A frequent cause of the error is that the application entry file path is incorrect.
-
+```
+`원인`: 안드로이드 빌드 및 기존 버전 캐시<br>
+`해결`
+```
 cd ios && pod deintegrate
 rm -rf Podfile.lock
 pod install
+```
