DAY 12: ~ 토큰 재발급

--- a/wonjin/TIL/week-3/0318.md
+++ b/wonjin/TIL/week-3/0318.md
@@ -15,5 +15,6 @@
 > 자체적인 반복문
 - `keyExtractor` 함수를 인자로 받음
 > 반복문 key
-- `renderItem`
-> 
+
+- axios `intercepter`
+> axios에서 지원해주는 기능. xhr, fetch는 지원해주지 않음
